# examples

./: Cargo.toml  README.md
viontin-alpha/: Cargo.toml  tailwind.config.toml
viontin-alpha/assets/: tailwind.css
viontin-alpha/config/: app.json  database.json
viontin-alpha/html/: about.html  blog-post.html  blog.html  contact.html  features.html  index.html
viontin-alpha/src/: main.rs
viontin-alpha/src/commands/: build_css.rs  greet.rs  mod.rs
viontin-alpha/src/events/: mod.rs  user_registered.rs
viontin-alpha/src/jobs/: welcome_email.rs
viontin-alpha/src/mail/: welcome.rs
viontin-alpha/src/models/: user.rs
viontin-alpha/src/notifications/: follower.rs
viontin-alpha/src/queries/: mod.rs
viontin-alpha/src/routes/: blog.rs  home.rs  mod.rs
viontin-zero/: Cargo.toml
viontin-zero/html/: ecosystems.html  features.html  index.html
viontin-zero/src/: main.rs
viontin-zero/src/commands/: greet.rs
viontin-zero/src/routes/: mod.rs
