[package]
name = "viontin-alpha"
version = "0.1.0"
edition = "2024"

[dependencies]
viontin = { path = "../../products/viontin/crates/viontin" }
linkme = "0.3.36"
viontin-gem-tailwind = { path = "../../products/gems/crates/tailwind" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
